# echobuf

./: CLAUDE.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.claude/agents/: ariadne.md  qa.md  theseus.md
.daedalus/: project-map.md
.daedalus/roadmap/: v0.1-walking-skeleton.md  v0.2-usable.md  v0.3-daily-driver.md  v0.4-polish.md
contrib/: echobuf.service  manual-test-checklist.md
contrib/aur/: .SRCINFO  PKGBUILD
echobuf/: __init__.py  backend.py  cli.py  config.py  daemon.py  hotkey.py  ipc.py  notify.py  ringbuffer.py  sources.py  template.py  tray.py
tests/: test_backend.py  test_config.py  test_ipc.py  test_ringbuffer.py  test_template.py
