[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "echobuf"
version = "0.4.0"
description = "Audio instant-replay buffer for Linux"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]
dependencies = [
    "numpy>=1.24",
    "soundfile>=0.12",
    "pulsectl>=23.5",
]

[project.optional-dependencies]
tray = ["pystray>=0.19", "Pillow>=10.0", "PyGObject>=3.42"]
hotkey = ["pynput>=1.7"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
echobuf = "echobuf.cli:main"

[tool.setuptools.packages.find]
include = ["echobuf*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
